=== 12.9.0 / 2012-09-18

* The format of the pipeline were unified to "feed object" (array of feeds).

  * Some plug-ins have lost backward compatibility.

* Added new plug-ins.

  * Subscription::Link
  * Subscription::Twitter
  * Filter::AbsoluteURI

* Removed obsolete plug-ins.

  * Subscription::URI
  * Extract::Link
  * Filter::Image
  * Store::Link
  * Store::Target


=== 12.6.0 / 2012-06-18

* Added plug-ins.

  * Subscription::URI
  * Extract::Link
  * Filter::Image
  * Store::Link
  * Store::Target

* Improvement automatic-config.

  * Scaffold makes config and db directory.
  * Unscaffold SubCommand added to automatic-config.

* Improvement search path.

  * Search user_dir's config when order -c option with simple filename.
  * If user's db directory exist, use it.

* Improvement log.

  * Show recipe and db name on log.

* Refactoring.

  * Refactoring plug-in names.
  * Header fields.

* Add tests.

  * RSpec code coverage over 99%.
  * Add all option script/build.


=== 12.4.0 / 2012-04-30

* Inspect SubCommand added to automatic-config.

* Added plug-ins.

  * Filter::Reverse
  * Publish::SMTP
  * Publish::Mail

* Running all Integration Tests with CI.


=== 12.3.1 / 2012-03-16

* English Documents.

  * doc/README
  * doc/PLUGINS

* The user who installed the gem package be able to create own plugins.

  * ~/.automatic/plugins

* Utils merged to automatic-config command and added following subcommand.

  * scaffold
  * autodiscovery
  * opmlparser
  * feedparser
  * log

* Added Integration Test Script for CI.

  * script/build


=== 12.03 / 2012-03-07

* Distribute as a gem library.

* Plugins added.

  * CustomFeed::SVNLog
  * Notify::Ikachan
  * Filter::TumblrResize
  * Filter::Image
  * Store::TargetLink

* CI / Build scripts.

  * script/bootstrap

* Signficant Refactoring.


=== 12.02.1 / 2012-02-25

* Point release.

  * Big Refactoring for core.
  * Reorganization of the namespace.
  * A few plugins added.


=== 12.02 / 2012-02-18
