@@ -316,8 +316,8 @@ http://jenkins.id774.net/jenkins/
 
 2 タブ (ソフトタブ)
 末尾のスペースは除去
-名前空間は既存のコードを参照
 {} は do end より推奨される
+コーディング規約は 1 ファイルの中で完結するべきである
 RDoc ヘッダはファイルの作者によって書かれる
 RSPec でテストを書く
 カバレッジ 100% を目指す
