@@ -10,7 +10,6 @@
 require File.expand_path(File.dirname(__FILE__) + '../../../spec_helper')
 
 require 'store/target_link'
-
 require 'tmpdir'
 require 'pathname'
 
